--- a/Mobile Testing/Mobile Testing/Info.plist
+++ b/Mobile Testing/Mobile Testing/Info.plist
@@ -20,6 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Do you want to remember where you finished your previous testing</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Do you want to remember where you finished your previous testing</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Do you want to remember where you finished your previous testing</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -31,8 +37,7 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
